choose-mirror (1.09) UNRELEASED; urgency=low

  * Colin Watson
    - Build-depend on iso-codes. Closes: #307500
    - Remove debian/templates.tmp, debian/iso-codes, and debian/pobuild on
      clean.
    - Don't ship debian/choose-mirror.templates in the source package; it
      can be built at build time.

 -- Christian Perrier <bubulle@debian.org>  Sun,  1 May 2005 21:51:06 +0200

choose-mirror (1.08) unstable; urgency=low

  * Colin Watson
    - Build-depend on locales.
    - Exec choose-mirror in postinst (saves a process).
  * Christian Perrier
    - Add self to Uploaders
    - debian/rules: Activate the code to grab country names
      and translations from iso-codes, saving double work to
      translators.
      Closes: #242689
    - templates-in: renamed to choose-mirror.templates-in
    - choose-mirror.templates-in:
      Add details about specifying an alternate port for
      HTTP and FTP mirror hostnames.
      Closes: #253575

 -- Christian Perrier <bubulle@debian.org>  Sun,  1 May 2005 20:12:37 +0200

choose-mirror (1.07) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Guillem Jover
    - Welsh (cy.po) by Dafydd Harries
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Italian (it.po) by Stefano Canepa
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Dmitry Beloglazov
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Slovenian (sl.po) by Jure Čuhalev
    - Swedish (sv.po) by Per Olofsson
    - Turkish (tr.po) by Recai Oktaş
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov