@@ -2,7 +2,7 @@
 #
 # DO NOT EDIT choose-mirror.templates which is auto-generated by the Makefile
 #
-# Some templates text are also hidden in makeheader.pl
+# Some templates text are also hidden in mirrorlist
 
 Template: mirror/country
 Type: string
