@@ -93,3 +93,4 @@ done
 # and now we generate the templates file from all this
 PODEBCONF_LIB=. po2debconf --podir debian/pobuild debian/templates.tmp >debian/choose-mirror.templates
 
+rm -f debian/templates.tmp
