@@ -6,6 +6,13 @@ choose-mirror (1.09) UNRELEASED; urgency=low
       clean.
     - Don't ship debian/choose-mirror.templates in the source package; it
       can be built at build time.
+  * Joey Hess
+    - Rename README.new to README.
+    - Make sort-countries executable and remove chmod stuff in debian/rules.
+    - Remove various obsolete comments.
+    - Rename makeheader.pl to mirrorlist to reflect its expanded capabilities.
+    - Some code cleanup in mirrorlist.
+    - Further improve file cleanups.
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  1 May 2005 21:51:06 +0200
 
